--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,38 +1,16 @@
 name: Ebac CI
 
-on: 
+on:
   push:
     branches: [ ci ]
 
-  workflow_dispatch:
-
 jobs:
-
   test:
-
     runs-on: ubuntu-latest
-
     steps:
-
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-      - name: Cypress run
-        uses: cypress-io/github-action@v6.7.8
-        continue-on-error: true
-        with:
-          install-command: npm install
-          browser: chrome
-      - name: Publish report 
+      - uses: actions/checkout@v3
+      - name: Publish reports
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./mochawesome-report
-          
-
-
-          
-
-      
-  
