--- a/.github/workflows/testeEbac.yml
+++ b/.github/workflows/testeEbac.yml
@@ -28,5 +28,5 @@ jobs:
       - name: Publish report 
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GIT_TOKEN }}
           publish_dir: ./mochawesome-report
